GLSP-991: Switch Jenkins build to Java 17 (#201)
-Remove direct dependency to javax.inject by switching to google.inject counterparts
 Due to the namespace switch from javax->jakarta with Java17 it's otherwise hard to maintain a build that works for both 11 and 17.
-Remove `illegal-access=permit" flag from plugin configuration as it is no longer supported in Java17
-Update maven-shade plugin config to get rid of warnings
-Introduce a new orthogonal Java11 compatibility build job that is triggered for every master commit

Fixes https://github.com/eclipse-glsp/glsp/issues/991